[maven-release-plugin] prepare release isrt-4.10.1

--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-         http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0          http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>de.intarsys.opensource</groupId>
   <artifactId>isrt</artifactId>
-  <version>4.10.1-SNAPSHOT</version>
+  <version>4.10.1</version>
 
   <name>isrt</name>
   <description>The basic runtime tools and interfaces for intarsys components.</description>
@@ -31,6 +28,7 @@
     <url>https://github.com/apwfw/isRuntime</url>
     <connection>scm:git:git://github.com/apwfw/isRuntime.git</connection>
     <developerConnection>scm:git:git@github.com:apwfw/isRuntime.git</developerConnection>
+    <tag>isrt-4.10.1</tag>
   </scm>
 
   <developers>
