[maven-release-plugin] prepare release isrt-4.10.1

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
     </developer>
   </developers>
 
+  <distributionManagement>
+    <repository>
+      <id>clojars</id>
+    </repository>
+  </distributionManagement>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
